--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @movie do |f| %>
 <%= f.input :title %>
 <%= f.input :description %>
+<%= f.input :image, as: :file %>
 <%= f.submit "Submit", class:"btn btn-primary", data: {disable_with: "Submiting..."} %>
 <% end %>
