--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,29 +1,18 @@
-<div class="col-md-12">
-  <%= link_to("New Movie", new_movie_path, class:"btn btn-default pull-right")%>
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <td>#</td>
-        <td>Title</td>
-        <td>Description</td>
-        <td>Creator</td>
-      </tr>
-    </thead>
-    <tbody>
-      <% @movies.each do |movie|%>
-        <tr>
-          <td>#</td>
-          <td><%= link_to(movie.title, movie_path(movie))%></td>
-          <td><%= movie.description %></td>
-          <td><%= movie.user.email %></td>
-          <td>
-            <% if current_user && current_user == movie.user %>
-            <%= link_to("Edit", edit_movie_path(movie), class:"btn btn-sm btn-default")%>
-            <%= link_to("Delete", movie_path(movie), class:"btn btn-sm btn-default", method: :delete, data:{ confirm:"Are you sure"})%>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+  <div class="new">
+    <div class="col-md-12">
+    <%= link_to("New Movie", new_movie_path, class:"btn btn-default pull-right")%>
+    </div>
+  </div>
+  <div class="poster">
+  <% @movies.each do |movie|%>
+  <div class="col-xs-6 col-md-3">
+  <%= link_to movie_path(movie) do %>
+  <% if movie.image.present? %>
+  <%= image_tag(movie.image.thumb.url)%>
+  <% else %>
+  <%= image_tag("http://placehold.it/300x400&text=No Pic")%>
+  <% end %>
+  <% end %>
+  </div>
+  <% end %>
+  </div>
