--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,5 @@
 <div class="col-md-12">
+  <%= link_to("Write a review", new_movie_post_path(@movie), class: "btn btn-default pull-right")%>
   <% if current_user && current_user == @movie.user %>
   <%= link_to("Edit", edit_movie_path(@movie), class:"btn btn-primary pull-right")%>
   <% end %>
