--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,6 +3,9 @@
   <% if current_user && current_user == @movie.user %>
   <%= link_to("Edit", edit_movie_path(@movie), class:"btn btn-primary pull-right")%>
   <% end %>
+</div>
+<div class="row">
+<div class="col-md-6">
   <% if @movie.image.present? %>
   <%= image_tag(@movie.image.medium.url)%>
   <% else %>
@@ -15,4 +18,16 @@
   |
   <%= link_to("Delete", movie_path(@movie),method: :delete, data: {confirm:"Are you sure?"})%>
   <% end %>
+</div>
+<div class="col-md-5 col-md-offset-1">
+
+    <% @posts.each do |post|%>
+    <div class="review">
+    <p><%= post.user.email %></p>
+    <p><%= post.content %> </p>
+    </div>
+    <% end %>
+
+
+</div>
 </div>
