--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="poster">
   <% @movies.each do |movie|%>
-  <div class="col-xs-6 col-md-3">
+  <div class="col-xs-6 col-md-3" style="margin-top:20px;">
   <%= link_to movie_path(movie) do %>
   <% if movie.image.present? %>
   <%= image_tag(movie.image.thumb.url)%>
