--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,12 @@
+<head>
+  <style>
+  .favorite {
+
+  }
+  </style>
+</head>
 <div class="col-md-12">
-  <%= link_to("Write a review", new_movie_post_path(@movie), class: "btn btn-default pull-right")%>
+
   <% if current_user && current_user == @movie.user %>
   <%= link_to("Edit", edit_movie_path(@movie), class:"btn btn-primary pull-right")%>
   <% end %>
@@ -28,6 +35,24 @@
     </div>
     <% end %>
 
-
-</div>
+    <div class="favorite">
+       <% if user_signed_in? %>
+       <% if !current_user.is_fan_of?(@movie) %>
+         点击收藏可以对电影评论哦！！！
+        <%= link_to favorite_movie_path(@movie), :class => "like btn btn-default",method: :post do %>
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <% end %>
+      <% else %>
+        <%= link_to unfavorite_movie_path(@movie), :class => "like btn btn-default", method: :post do %>
+        <i class="fa fa-heart" aria-hidden="true" style="color:red;"></i>
+          <%= link_to("Write a review", new_movie_post_path(@movie), class: "btn btn-default btn-warning")%>
+        <% end %>
+        <% end %>
+        <% else %>
+        <%= link_to favorite_movie_path(@movie), :class => "like btn btn-default",method: :post do %>
+        <i class="fa fa-heart"></i>
+        <% end %>
+        <% end %>
+      </div>
+    </div>
 </div>
