--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,7 +8,7 @@
   <div class="col-xs-6 col-md-3" style="margin-top:20px;">
   <%= link_to movie_path(movie) do %>
   <% if movie.image.present? %>
-  <%= image_tag(movie.image.thumb.url)%>
+  <%= image_tag(movie.image.medium.url)%>
   <% else %>
   <%= image_tag("http://placehold.it/300x400&text=No Pic")%>
   <% end %>
