--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -31,6 +31,7 @@
     <% @posts.each do |post|%>
     <div class="review">
     <p><%= post.user.email %></p>
+    <p class="star-rating" data-score=<%= post.rating %>></p>
     <p><%= post.content %> </p>
     </div>
     <% end %>
@@ -57,3 +58,18 @@
       </div>
     </div>
 </div>
+
+<script>
+//ratyrate
+    $('.star-rating').raty({
+           path: '/images/',
+               readOnly: true,
+               score: function() {
+             return $(this).attr('data-score');
+           }
+     });
+     $('#star-rating').raty({
+     path: '/images/',
+     scoreName: 'post[rating]'
+     });
+</script>
